yaml/yuki/test-rc2.yaml
# This creates a 'jumhost' Pod to test the K8s Service
apiVersion: v1
kind: Pod
metadata:
  name: mgmtpod
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
---
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  annotations:
    ncp/snat_pool: k8s-External-IP-Pool03 
  name: nsx-demo
  labels:
    app: nsx-demo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    #app: nsx-demo
    app: nsx-demo
  type: LoadBalancer
